# Generated by Django 5.2.8 on 2025-11-30 07:34

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('cms', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='UserProfile',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('role', models.CharField(choices=[('citizen', 'Citizen'), ('employee', 'Employee'), ('admin', 'Admin')], default='citizen', max_length=30)),
                ('phone', models.CharField(blank=True, max_length=15)),
                ('level', models.CharField(blank=True, choices=[('Level-1', 'Level-1'), ('Level-2', 'Level-2')], max_length=10, null=True)),
                ('department', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='cms.department')),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='profile', to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
